# loop_closure_detector

./: CMakeLists.txt  README.md  package.xml
cfg/: params.cfg
data/: combine.g2o  edge_se3_quat.txt  vertex_se3_quat.txt
include/: closeloop.h  store_images.h
launch/: closeloop.launch  store_images.launch
src/: closeloop.cpp  closeloop_node.cpp  store_images.cpp  store_images_node.cpp
